@@ -1,3 +1,7 @@
 #!/bin/bash
 
 apt-get update -o Dir::Etc::sourcelist="sources.list.d/cultibox.list"  -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
+
+if [ -f /etc/apt/sources.list.d/cultibox-dev.list ]; then
+    apt-get update -o Dir::Etc::sourcelist="sources.list.d/cultibox-dev.list"  -o Dir::Etc::sourceparts="-" -o APT::Get::List-Cleanup="0"
+fi
